--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: url('highestboxer_white_volvo_euro5_truck_no_text_for_large_full_scr_41b7c5d5-ced4-4536-ad30-ee656db5a0de-transformed.png') no-repeat center center fixed;
+            background: url('background.jpg') no-repeat center center fixed;
             background-size: cover;
         }
         .overlay {
