--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 <p class="lead mb-4">Transportation Services</p>
                 <p class="mb-4">Company Name <br />Address 1<br />Address 2<br />City Zip<br />Country</p>
                 <div class="contact-info">
-                    <p class="mb-2">WhatsApp: +1 650 684 4958</a></p>
-                    <p>Email: ydenisov8@gmail.com</a></p>
+                    <p class="mb-2">WhatsApp: +XX XXX XX XXXX</a></p>
+                    <p>Email: email@email.com</a></p>
                 </div>
             </div>
         </div>
