--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     <div class="overlay">
         <div class="container text-center">
             <div class="content-box">
-                <h1 class="display-4 mb-4">Ki-RealTrans</h1>
+                <h1 class="display-4 mb-4">KI-REALTRANS</h1>
                 <p class="lead mb-4">Transportation Services</p>
-                <p class="mb-4">Company Name <br />Address 1<br />Address 2<br />City Zip<br />Country</p>
+                <p class="mb-4">KI-REALTRANS Sp. z o.o.<br />Zwycięstwa 26 C / 20<br />15-703 Białystok<br />POLAND<br />NIP 5423454395</p>
                 <div class="contact-info">
-                    <p class="mb-2">WhatsApp: +XX XXX XX XXXX</a></p>
-                    <p>Email: email@email.com</a></p>
+                    <p class="mb-2">WhatsApp: +49 176 844 262 41</a></p>
+                    <p>Email: ki.realtrans@gmail.com</a></p>
                 </div>
             </div>
         </div>
