--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             text-decoration: none;
             color: #fff;
         }
+        /* Add this part for responsive text */
+        @media (max-width: 767px) {
+            h1.display-4 {
+                font-size: 1.5rem;
+            }
+        }
     </style>
 </head>
 
@@ -42,12 +48,13 @@
     <div class="overlay">
         <div class="container text-center">
             <div class="content-box">
-                <h1 class="display-4 mb-4">KI-REALTRANS</h1>
+                <!-- Update the header text -->
+                <h1 class="display-4 mb-4">Ki-RealTrans</h1>
                 <p class="lead mb-4">Transportation Services</p>
                 <p class="mb-4">KI-REALTRANS Sp. z o.o.<br />Zwycięstwa 26 C / 20<br />15-703 Białystok<br />POLAND<br />NIP 5423454395</p>
                 <div class="contact-info">
-                    <p class="mb-2">WhatsApp: +49 176 844 262 41</a></p>
-                    <p>Email: ki.realtrans@gmail.com</a></p>
+                    <p class="mb-2">WhatsApp: +49 176 844 262 41</p>
+                    <p>Email: ki.realtrans@gmail.com</p>
                 </div>
             </div>
         </div>
