--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
             text-decoration: none;
             color: #fff;
         }
-        /* Add this part for responsive text */
         @media (max-width: 767px) {
             h1.display-4 {
-                font-size: 2rem;
+                font-size: 2.5rem;
             }
         }
     </style>
@@ -48,9 +47,16 @@
     <div class="overlay">
         <div class="container text-center">
             <div class="content-box">
-                <!-- Update the header text -->
                 <h1 class="display-4 mb-4">Ki-RealTrans</h1>
+                <!-- Added Slogan -->
+                <p class="lead mb-4"><strong>The Better Way</strong></p>
                 <p class="lead mb-4">Transportation Services</p>
+                <!-- Added New Services -->
+                <p>We offer two key services:</p>
+                <ul>
+                    <li>Transportation Services: We handle your logistics needs.</li>
+                    <li>Rental Driver Services: You provide the truck and route, we provide the driver.</li>
+                </ul>
                 <p class="mb-4">KI-REALTRANS Sp. z o.o.<br />Zwycięstwa 26 C / 20<br />15-703 Białystok<br />POLAND<br />NIP 5423454395</p>
                 <div class="contact-info">
                     <p class="mb-2">WhatsApp: +49 176 844 262 41</p>
