--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             text-decoration: none;
             color: #fff;
         }
+        /* Update for slogan styling */
+        .slogan {
+            font-size: 1.2rem;
+            font-style: italic;
+            color: #555;
+        }
         @media (max-width: 767px) {
             h1.display-4 {
                 font-size: 2.5rem;
@@ -48,14 +54,14 @@
         <div class="container text-center">
             <div class="content-box">
                 <h1 class="display-4 mb-4">Ki-RealTrans</h1>
-                <!-- Added Slogan -->
-                <p class="lead mb-4"><strong>The Better Way</strong></p>
-                <p class="lead mb-4">Transportation Services</p>
-                <!-- Added New Services -->
+                <!-- Updated Slogan Style -->
+                <p class="slogan mb-4"><strong>The Better Way</strong></p>
+                <!-- Updated Title -->
+                <p class="lead mb-4">Transportation and Driver Rental Services</p>
                 <p>We offer two key services:</p>
                 <ul>
-                    <li>Transportation Services: We handle your logistics needs.</li>
-                    <li>Rental Driver Services: You provide the truck and route, we provide the driver.</li>
+                    <li><strong>Transportation Services:</strong> We handle your logistics needs.</li>
+                    <li><strong>Rental Driver Services:</strong> You provide the truck and route, we provide the driver.</li>
                 </ul>
                 <p class="mb-4">KI-REALTRANS Sp. z o.o.<br />Zwycięstwa 26 C / 20<br />15-703 Białystok<br />POLAND<br />NIP 5423454395</p>
                 <div class="contact-info">
