--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
             text-decoration: none;
             color: #fff;
         }
-        /* Update for slogan styling */
         .slogan {
             font-size: 1.2rem;
             font-style: italic;
             color: #555;
+        }
+        /* Remove bullets from list */
+        ul {
+            list-style-type: none;
         }
         @media (max-width: 767px) {
             h1.display-4 {
@@ -54,11 +57,10 @@
         <div class="container text-center">
             <div class="content-box">
                 <h1 class="display-4 mb-4">Ki-RealTrans</h1>
-                <!-- Updated Slogan Style -->
                 <p class="slogan mb-4"><strong>The Better Way</strong></p>
-                <!-- Updated Title -->
                 <p class="lead mb-4">Transportation and Driver Rental Services</p>
                 <p>We offer two key services:</p>
+                <!-- Updated list style -->
                 <ul>
                     <li><strong>Transportation Services:</strong> We handle your logistics needs.</li>
                     <li><strong>Rental Driver Services:</strong> You provide the truck and route, we provide the driver.</li>
